[copy] Add sale terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -186,3 +186,9 @@
       p The failure of the Company to exercise or enforce any right or provision of these Terms shall not constitute a waiver or relinquishment to any extent of the Company's right to assert or rely upon any such provision or right in that or any other instance, and the same shall be and remain in full force and effect. If any provision of these Terms is found by a court of competent jurisdiction, statute, rule or otherwise to be invalid, the parties nevertheless agree that the remaining provisions shall not be affected thereby and shall continue in full force and effect, and such provision may be modified or severed from these Terms to the extent necessary to make such provision enforceable and consistent with the remainder of these Terms.
 
       p Updated May 2015
+
+      h2 15% off new season sale
+
+      p Offer valid on full price new season styles only. Prices as marked. Offer valid online at fameandpartners.com only. Offer not valid on customisations, custom colours or express making fees. Offer valid between 23rd - 30th of June 2015. Orders placed during the sale from AU, US or UK incur a $11.70 shipping fee. All other countries incur a $30 shipping fee.
+
+      p Shipping & handling timing approximately 7-10 days on all orders. The customer covers for shipping cost in case of returns. Items purchased during the 15% off new season sale will not incur a restocking fee.
