--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -8,7 +8,7 @@
 
   .btn{
     font-family: $font-family-secondary;
-    width: 100%;
+    width: 377px;
     padding-left: 0;
     padding-right: 0;
   }
@@ -62,12 +62,12 @@
   position: absolute;
   left: 17px;
   top: 130px;
-  width: (100% / 4);
+  width: (100% / 3);
   display: block;
   color: #fff;
 
   img {
-    max-width: 377px;
+    width: 377px;
   }
 }
 
