[feat] Sale banner

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -239,3 +239,5 @@ ruby:
               span#cart-item-count 0
 
 = render 'layouts/redesign/campaigns/auto_apply_promo_code'
+
+= render 'layouts/redesign/notices'
