--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -4,7 +4,9 @@
 }
 
 .all-dresses {
-  padding-right: 0;
+  padding: 0;
+  margin-left: 15px;
+  &.col-md-4 { padding-top: 0;}
 
   .btn{
     font-family: $font-family-secondary;
@@ -67,7 +69,7 @@
   color: #fff;
 
   img {
-    width: 377px;
+    width: 100%;
   }
 }
 
