--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -71,8 +71,8 @@ ruby:
               .mega-menu--main
                 .container-fluid.max-width-100
                   .row
-                    .col-md-3.all-dresses
-                      = button_to 'View all dresses', dresses_path, class: 'btn btn-black', method: :get
+                    .col-md-4.all-dresses
+                      = button_to 'View all dresses', dresses_path, class: 'btn btn-block btn-black', method: :get
                     / .col-md-3
                     /   p.button-grey-text.menu-main-promotions
                     /     span.packing-box.menu-icon
