--- a/app/views/users/style_profiles/_events.html.slim
+++ b/app/views/users/style_profiles/_events.html.slim
@@ -23,7 +23,7 @@ ruby:
       
   .row
     .col-sm-3
-      = link_to 'Add', '#', class: 'btn btn-primary btn-block', data: { action: 'add-event' }
+      = link_to 'Add', '#', class: 'btn btn-md btn-black btn-block', data: { action: 'add-event' }
     .col-sm-2.text-center
       .btn.btn-md.btn-text or
     .col-sm-7
