--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/application.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/application.css.scss
@@ -1,12 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Forum);
+@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
 
 @import 'bourbon';
 
 @import 'normalize.css';
-
 @import 'partials/vars';
 
 @import 'partials/icons';
+@import 'partials/jquery-ui-1.10.4.custom';
 
 @import 'partials/helpers';
 
