[feat] remove tracking codes from templates
Tracking codes can be dynamically inserted using GTM

--- a/app/views/layouts/redesign/maintenance.html.slim
+++ b/app/views/layouts/redesign/maintenance.html.slim
@@ -9,6 +9,6 @@ doctype html
     = render 'layouts/redesign/head'
 
   body#top.maintenance-page
-    = yield
+    = render 'layouts/redesign/google_tag_manager'
 
-    = render 'shared/remarketing_tag'
+    = yield
