--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -123,6 +123,7 @@ $product-color-hot-pink: #ff3399;
       .color-purple                  { background-color: #622b6f; }
       .color-red                     { background-color: $product_color-red; }
       .color-red-and-white           { @include split-color-selector($product-color-red, #fffff0); }
+      .color-rose-gold               { background-color: #d6aa85; }
       .color-royal-blue              { background-color: #3f34b2; }
       .color-royal-purple            { background-color: #77539c; }
       .color-sage                    { background-color: #826a77; }
