--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -37,3 +37,4 @@ li class=active_link_to_class('', active: /reports/)
 
 = menu_item spree.admin_path, 'Spree Admin', icon: 'shopping-cart'
 = menu_item main_app.root_path, 'Website', icon: 'globe', exact: true
+= menu_item item_returns_path,  'Item Returns', icon: 'thumbs-down'
