move return items links to nested menu

--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -1,5 +1,14 @@
 = menu_item root_path, 'Dashboard', icon: 'dashboard', exact: true
 
+li class="#{active_link_to_class(return_requests_path)} #{active_link_to_class(item_returns_path)}"
+  a href="#"
+    i.fa.fa-thumbs-down
+    span.nav-label Returns Management
+    span.fa.arrow
+  ul.nav.nav-second-level.collapse aria-expanded="false" style="height: 0px;"
+    = menu_item item_returns_path,    'Approvals'
+    = menu_item return_requests_path, 'Requests'
+
 - backend_links = [['admin_ui/caches', 'admin_ui/sidekiqs', 'admin_ui/product_indexes'], []]
 li class=active_link_to_class(root_path, active: backend_links)
   a href="#"
@@ -33,8 +42,5 @@ li class=active_link_to_class('', active: /reports/)
     = active_link_to 'Sale Items', reports_sale_items_path, wrap_tag: :li
     = active_link_to 'Return Shoppers', reports_return_shoppers_path, wrap_tag: :li
 
-= menu_item return_requests_path, 'Returns Management', icon: 'thumbs-down'
-
 = menu_item spree.admin_path, 'Spree Admin', icon: 'shopping-cart'
 = menu_item main_app.root_path, 'Website', icon: 'globe', exact: true
-= menu_item item_returns_path,  'Item Returns', icon: 'thumbs-down'
