--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -2,7 +2,7 @@
   #sale-banner.alert-sale.alert-relative role="alert" style="text-transform:uppercase;font-size:1.333333em;text-align:center;background-color:#E02D91"
     span.medium.banner-title
       .center-block
-        span style="margin-right:15px;color:white;" 15% OFF SITE WIDE.
+        span style="margin-right:15px;color:white;" UP TO 50% OFF SITE WIDE.
         span style="margin-right:15px;color:white;" LIMITED TIME ONLY.
       .center-block
         span = link_to 'Shop now!', dresses_path, class: 'text-highlight',  style: 'color:white;text-decoration:underline'
