handle item_return creation from return requests

--- a/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
@@ -1,5 +1,15 @@
-ul
-- @collection.each do |ir|
-  li =  link_to ir.inspect, ir
+- content_for :page_title do
+  'Item Returns
 
 
+= datagrid_form_for @collection, :method => :get, :url => '/'
+
+= paginate @collection.assets, theme: 'admin_ui'
+
+div style="overflow-x: auto; max-height:100%;"
+  = datagrid_table @collection, html: {class: 'table table.condensed'}
+
+dl
+- @ir.attributes.each do |k,v|
+  dt = k
+  dd = v
