--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -191,4 +191,4 @@
 
       p Offer valid on full price new season styles only. Prices as marked. Offer valid online at fameandpartners.com only. Offer not valid on customisations, custom colours or express making fees. Offer valid between 23rd - 30th of June 2015. Orders placed during the sale from AU, US or UK incur a $11.70 shipping fee. All other countries incur a $30 shipping fee.
 
-      p Shipping & handling timing approximately 7-10 days on all orders. The customer covers for shipping cost in case of returns. Items purchased during the 15% off new season sale will not incur a restocking fee.
+      p Shipping & handling timing approximately 7-10 days on all orders. The customer covers for shipping cost in case of returns. Items purchased during the 15% off new season sale that are discounted more than 15% will incur a $14.95 restocking fee.
