[fix] remove blog URL reference from email templates

--- a/app/views/spree/user_mailer/welcome_to_competition.html.slim
+++ b/app/views/spree/user_mailer/welcome_to_competition.html.slim
@@ -45,9 +45,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 = link_to "Our Collection", main_app.collection_url(track_options), style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 '  |  
-                = link_to "About us", main_app.about_url(track_options), style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                '  |  
-                = link_to "Blog", main_app.blog_url(track_options), style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
+                = link_to "About us", main_app.about_us_url(track_options), style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
             tr          
               td height="20"
       td width="38"
