--- a/app/views/spree/user_mailer/welcome_with_password.text.erb
+++ b/app/views/spree/user_mailer/welcome_with_password.text.erb
@@ -11,7 +11,4 @@ Our Collection
 <%= main_app.collection_url %>
 
 About
-<%= main_app.about_url %>
-
-Blog
-<%= main_app.blog_url %>
+<%= main_app.about_us_url %>
