--- a/app/views/spree/competitions_mailer/invite.html.slim
+++ b/app/views/spree/competitions_mailer/invite.html.slim
@@ -37,9 +37,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 a href="#{ main_app.collection_url }?utm_source=transactional&utm_medium=email&utm_term=competitioninvite&utm_content=links&utm_campaign=competition" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" Our Collection
                 '  |  
-                a href="#{ main_app.about_url }?utm_source=transactional&utm_medium=email&utm_term=competitioninvite&utm_content=links&utm_campaign=competition" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" About us
-                '  |  
-                a href="#{ main_app.blog_url }?utm_source=transactional&utm_medium=email&utm_term=competitioninvite&utm_content=links&utm_campaign=competition" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" Blog 
+                a href="#{ main_app.about_us_url }?utm_source=transactional&utm_medium=email&utm_term=competitioninvite&utm_content=links&utm_campaign=competition" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" About us
             tr          
               td height="20"
       td width="38"
