--- a/app/views/spree/user_mailer/reset_password_instructions.html.slim
+++ b/app/views/spree/user_mailer/reset_password_instructions.html.slim
@@ -30,7 +30,5 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td height="40" style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 = link_to "Our Collection", main_app.collection_url, style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 '  |  
-                = link_to "About", main_app.about_url, style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                '  |  
-                = link_to 'Blog', main_app.blog_url, style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
+                = link_to "About", main_app.about_us_url, style: "color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
       td width="38"
