--- a/app/views/spree/user_mailer/welcome.text.erb
+++ b/app/views/spree/user_mailer/welcome.text.erb
@@ -8,7 +8,4 @@ Our Collection
 <%= main_app.collection_url %>
                                     
 About
-<%= main_app.about_url %>
-
-Blog
-<%= main_app.blog_url %>
+<%= main_app.about_us_url %>
