tweak menu code formatting

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -95,33 +95,22 @@ ruby:
                     .col-md-3.col-lg-2.col-md-offset-4
                       h4.link-header Events
                       ul.mega-menu-list
-                        li.mega-menu-list--item
-                          = link_to 'Formal', build_taxon_path('Formal'), title: 'Formal'
-                        li.mega-menu-list--item
-                          = link_to 'Wedding', build_taxon_path('Wedding'), title: 'Wedding'
-                        li.mega-menu-list--item
-                          = link_to 'Birthday', build_taxon_path('Birthday'), title: 'Birthday'
-                        li.mega-menu-list--item
-                          = link_to 'Special Event', build_taxon_path('Special Event'), title: 'Special Event'
-                        li.mega-menu-list--item
-                          = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), title: 'Ball Gowns'
-                        li.mega-menu-list--item
-                          = link_to 'Bridesmaid', bridesmaid_collection_path, title: 'Bridesmaid'
-                        li.mega-menu-list--item
-                          = link_to 'Graduation', build_taxon_path('Graduation'), title: 'Graduation'
-                        li.mega-menu-list--item
-                          = link_to 'Prom', build_taxon_path('Prom'), title: 'Prom'
-                        li.mega-menu-list--item
-                          = link_to 'Homecoming', build_taxon_path('Homecoming'), title: 'Homecoming'
-                        li.mega-menu-list--item
-                          = link_to 'Sweet 16', build_taxon_path('Sweet 16'), title: 'Sweet 16'
-                        li.mega-menu-list--item
-                          = link_to 'Debutante', build_taxon_path('Debutante'), title: 'Debutante'
+                        li.mega-menu-list--item = link_to 'Formal', build_taxon_path('Formal'), title: 'Formal'
+                        li.mega-menu-list--item = link_to 'Wedding', build_taxon_path('Wedding'), title: 'Wedding'
+                        li.mega-menu-list--item = link_to 'Birthday', build_taxon_path('Birthday'), title: 'Birthday'
+                        li.mega-menu-list--item = link_to 'Special Event', build_taxon_path('Special Event'), title: 'Special Event'
+                        li.mega-menu-list--item = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), title: 'Ball Gowns'
+                        li.mega-menu-list--item = link_to 'Bridesmaid', bridesmaid_collection_path, title: 'Bridesmaid'
+                        li.mega-menu-list--item = link_to 'Graduation', build_taxon_path('Graduation'), title: 'Graduation'
+                        li.mega-menu-list--item = link_to 'Prom', build_taxon_path('Prom'), title: 'Prom'
+                        li.mega-menu-list--item = link_to 'Homecoming', build_taxon_path('Homecoming'), title: 'Homecoming'
+                        li.mega-menu-list--item = link_to 'Sweet 16', build_taxon_path('Sweet 16'), title: 'Sweet 16'
+                        li.mega-menu-list--item = link_to 'Debutante', build_taxon_path('Debutante'), title: 'Debutante'
 
                     .col-md-3.col-lg-2
                       h4.link-header Style
                       ul.mega-menu-list
-                        li.mega-menu-list--item= link_to 'Plus Size', build_taxon_path('Plus Size'), title: "Plus-Szie Dresses"
+                        li.mega-menu-list--item= link_to 'Plus Size', build_taxon_path('Plus Size'), title: "Plus-Size Dresses"
                         li.mega-menu-list--item= link_to 'Two-Piece', build_taxon_path('Two Piece'), title: "Two-Piece Dresses"
                         li.mega-menu-list--item= link_to 'One Shoulder', build_taxon_path('One-Shoulder'), title: "One Shoulder Dresses"
                         li.mega-menu-list--item= link_to 'Strapless', build_taxon_path('Strapless'), title: "Strapless Dresses"
