move shop items into own file

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -64,93 +64,8 @@ ruby:
             = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
         ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
-          li.shop.menu-item
-            a.menu-item--link.active-hover href="#"
-              | Shop
-            .mega-menu.hidden-sm
-              .mega-menu--main
-                .container-fluid.max-width-100
-                  .row
-                    .col-md-3.all-dresses
-                      = button_to 'View all dresses', dresses_path, class: 'btn btn-block btn-black', method: :get
-                    / .col-md-3
-                    /   p.button-grey-text.menu-main-promotions
-                    /     span.packing-box.menu-icon
-                    /     | Free Shipping
-                    / .col-md-3
-                    /   p.button-grey-text.menu-main-promotions
-                    /     span.arrows.menu-icon
-                    /     | Free Returns
-                    / .col-md-3
-                    /   p.button-grey-text.menu-main-promotions
-                    /     span.fit-guarantee.menu-icon
-                    /     | Fit Guarantee
-              .mega-menu--secondary
-                - if sale_active?
-                  = link_to dresses_path, class: 'mega-menu-banner' do
-                    = image_tag 'mega-menu/sale.jpg', alt: '15% Off New Season Sale', class: 'img-responsive'
-
-                .container-fluid.max-width-100
-                  .row
-                    .col-md-3.col-lg-2.col-md-offset-4
-                      h4.link-header Events
-                      ul.mega-menu-list
-                        li.mega-menu-list--item = link_to 'Formal',        build_taxon_path('Formal'),        title: 'Formal'
-                        li.mega-menu-list--item = link_to 'Wedding',       build_taxon_path('Wedding'),       title: 'Wedding'
-                        li.mega-menu-list--item = link_to 'Birthday',      build_taxon_path('Birthday'),      title: 'Birthday'
-                        li.mega-menu-list--item = link_to 'Special Event', build_taxon_path('Special Event'), title: 'Special Event'
-                        li.mega-menu-list--item = link_to 'Ball Gowns',    build_taxon_path('Ball Gowns'),    title: 'Ball Gowns'
-                        li.mega-menu-list--item = link_to 'Bridesmaid',    bridesmaid_collection_path,        title: 'Bridesmaid'
-                        li.mega-menu-list--item = link_to 'Graduation',    build_taxon_path('Graduation'),    title: 'Graduation'
-                        li.mega-menu-list--item = link_to 'Prom',          build_taxon_path('Prom'),          title: 'Prom'
-                        li.mega-menu-list--item = link_to 'Homecoming',    build_taxon_path('Homecoming'),    title: 'Homecoming'
-                        li.mega-menu-list--item = link_to 'Sweet 16',      build_taxon_path('Sweet 16'),      title: 'Sweet 16'
-                        li.mega-menu-list--item = link_to 'Debutante',     build_taxon_path('Debutante'),     title: 'Debutante'
-
-                    .col-md-3.col-lg-2
-                      h4.link-header Style
-                      ul.mega-menu-list
-                        li.mega-menu-list--item= link_to 'Plus Size',    build_taxon_path('Plus Size'),    title: "Plus-Size Dresses"
-                        li.mega-menu-list--item= link_to 'Two-Piece',    build_taxon_path('Two Piece'),    title: "Two-Piece Dresses"
-                        li.mega-menu-list--item= link_to 'One Shoulder', build_taxon_path('One-Shoulder'), title: "One Shoulder Dresses"
-                        li.mega-menu-list--item= link_to 'Strapless',    build_taxon_path('Strapless'),    title: "Strapless Dresses"
-                        li.mega-menu-list--item= link_to 'V-Neck',       build_taxon_path('V-Neck'),       title: "V-Neck Dresses"
-                        li.mega-menu-list--item= link_to 'Split',        build_taxon_path('Split'),        title: "Split Dresses"
-                        li.mega-menu-list--item= link_to 'Backless',     build_taxon_path('Backless'),     title: "Open Back Dresses"
-                        li.mega-menu-list--item= link_to 'Lace',         build_taxon_path('Lace'),         title: "Lace Dresses"
-
-                    .col-md-3.col-lg-2
-                      h4.link-header= t('color')
-                      ul.mega-menu-list
-                        li.mega-menu-list--item= link_to "Black",         colour_path('Black'),  title: "Black"
-                        li.mega-menu-list--item= link_to "White / Ivory", colour_path('White'),  title: "White / Ivory"
-                        li.mega-menu-list--item= link_to "Blue",          colour_path('Blue'),   title: "Blue"
-                        li.mega-menu-list--item= link_to "Pink",          colour_path('Pink'),   title: "Pink"
-                        li.mega-menu-list--item= link_to "Red",           colour_path('Red'),    title: "Red"
-                        li.mega-menu-list--item= link_to "Pastel",        colour_path('Pastel'), title: "Pastel"
-
-                    .col-md-3.col-lg-2
-                      - if Features.active?(:express_making)
-                        h4.link-header Express Making
-                        ul.mega-menu-list
-                          li.mega-menu-list--item= link_to 'Dresses made in 48 hours', fast_making_dresses_path, title: 'Express Making'
-
-                      - if Features.active?(:sales)
-                        h4.link-header Sale - Up to 50% Off
-                        ul.mega-menu-list
-                          - if sale_active?
-                            li.mega-menu-list--item= link_to 'Sale - Up to 50% Off', sales_collection_path,  title: 'Dresses On Sale'
-                            li.mega-menu-list--item= link_to "15 Percent Off",       dresses_path(sale: 15), title: 'All Dresses 15% off'
-                            li.mega-menu-list--item= link_to "30 Percent Off",       dresses_path(sale: 30), title: 'All Dresses 30% off'
-                            li.mega-menu-list--item= link_to "40 Percent Off",       dresses_path(sale: 40), title: 'All Dresses 40% off'
-                            li.mega-menu-list--item= link_to "50 Percent Off",       dresses_path(sale: 50), title: 'All Dresses 50% off'
-
-          - if Features.active?(:style_quiz)
-            li.menu-item
-              = link_to 'style quiz', '', class: 'menu-item--link', id: 'style-quiz-trigger'
-
+          = render partial: '/layouts/redesign/mega_menu/shop'
           = render partial: '/layouts/redesign/mega_menu/lookbook'
-
           li.menu-item
             = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
 
